# Projet-checs-TDLOG

./: .gitignore  AI.cpp  CMakeLists.txt  CMakeLists.txt.user.41b0203  README.md  board.cpp  board.h  game.cpp  game.h  link.py  main.cpp  pieces.cpp  pieces.h  player.cpp  player.h  utils.h
Python/: AI.py  Board.py  Button.py  a.py  board.py  board_graphics.py  button.py  chess.py  chess_game.py  config.py  first_screen.py  fisher.py  game.py  main.py  moving pieces.py  promotion.py  rematch.py  utils.py
Python/env/: pyvenv.cfg
python/: ai.py  board.py  button.py  chess_game.py  config.py  first_screen.py  game.py  main.py  piece.py  promotion.py  rematch.py  test_pygame.py  utils.py
